--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     
     <div class="conteiner_h4">
       <h4 class="h4_titulo">
+        LEMBRANDO QE CADA UM PAGA O SEU R$75,00 POR PESSOA<br>
         Te esperamos no Restaurante Toca do Cateto<br>
-        R. Ângelo Mioto, 732 - Heimtal, Londrina - PR, 86079-460
+        R. Ângelo Mioto, 732 - Heimtal, Londrina - PR, 86079-460 <br>
       </h4>
 
     </div>
@@ -62,13 +63,14 @@
         Nome:
         <input type="text" name="nome" id="nome_presensa" class="nome_presensa" required />
         <br />
-        Quantidade de pessoas:
+        Quantidade de familiares:
         <input type="number" name="qtd" id="qtd_pessoas" class="qtd_pessoas" required />
       </p>
       <button type="submit" class="botao_enviar">Enviar</button>
     </form>
 
     <!-- Mensagem de sucesso -->
+     <br>
     <div id="mensagem_sucesso" class="mensagem_sucesso">
       Confirmação enviada com sucesso! 🎉
     </div>
