--- a/index.html
+++ b/index.html
@@ -46,23 +46,25 @@
     
     <div class="conteiner_h4">
       <h4 class="h4_titulo">
-        LEMBRANDO QE CADA UM PAGA O SEU R$75,00 POR PESSOA<br>
         Te esperamos no Restaurante Toca do Cateto<br>
         R. Ângelo Mioto, 732 - Heimtal, Londrina - PR, 86079-460 <br>
+        LEMBRANDO QE CADA UM PAGA O SEU R$75,00
       </h4>
 
     </div>
     <div class="buttons">
-      <button id="button__presente">Estarei presente</button>
-      <button id="button__naoPresente">Não poderei ir</button>
+      <button id="button__presente" class="button__presente">Estarei presente</button>
+      <button id="button__naoPresente" class="button__naoPresente">Não poderei ir</button>
     </div>
 
     <!-- Formulário invisível inicialmente -->
     <form class="conteiner_nome__presensa" id="form_presenca" style="display: none;">
-      <p class="texto_nome__presensa">
+      <p class="texto_de__presensa">
         Nome:
         <input type="text" name="nome" id="nome_presensa" class="nome_presensa" required />
         <br />
+      </p>
+      <p class="texto_de__presensa">
         Quantidade de familiares:
         <input type="number" name="qtd" id="qtd_pessoas" class="qtd_pessoas" required />
       </p>
