--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     
     <div class="conteiner_h4">
       <h4 class="h4_titulo">
-        Te esperamos no Restaurante Toca do Cateto<br>
-        R. Ângelo Mioto, 732 - Heimtal, Londrina - PR, 86079-460 <br>
-        LEMBRANDO QE CADA UM PAGA O SEU R$75,00
+        Convidamos você a nos encontrar no Restaurante Toca do Cateto<br>
+        Endereço: Rua Ângelo Mioto, 732 – Heimtal, Londrina – PR, 86079-460.<br>
+        INFORMAMOS QUE O VALOR INDIVIDUAL DO JANTAR É DE R$ 75,00, POR PESSOA.
       </h4>
 
     </div>
