--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <h4 class="h4_titulo">
         Convidamos você a nos encontrar no Restaurante Toca do Cateto<br>
         Endereço: Rua Ângelo Mioto, 732 – Heimtal, Londrina – PR, 86079-460.<br>
-        INFORMAMOS QUE O VALOR INDIVIDUAL DO JANTAR É DE R$ 75,00, POR PESSOA.
+        INFORMAMOS QUE O VALOR INDIVIDUAL DO JANTAR É DE R$ 70,00, POR PESSOA.<br>
+        BEBIDAS NÂO INCLUSAS
       </h4>
 
     </div>
