--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="conteiner_h3">
       <h3 class="h3_titulo">
-        Você está convidado para a nossa cerimônia de casamento
+        Você está convidado para o nosso almoço cerimônial
       </h3>
     </div>
 
