--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         Convidamos você a nos encontrar no Restaurante Toca do Cateto<br>
         Endereço: Rua Ângelo Mioto, 732 – Heimtal, Londrina – PR, 86079-460.<br>
         <br>
-        INFORMAMOS QUE O VALOR INDIVIDUAL DO JANTAR É DE R$ 70,00 POR PESSOA.<br>
-        BEBIDAS NÂO INCLUSAS
+        INFORMAMOS QUE O VALOR INDIVIDUAL DO ALMOÇO É ATÉ R$ 70,00 POR PESSOA.<br>
+        BEBIDAS NãO INCLUSAS
       </h4>
 
     </div>
