--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Endereço: Rua Ângelo Mioto, 732 – Heimtal, Londrina – PR, 86079-460.<br>
         <br>
         INFORMAMOS QUE O VALOR INDIVIDUAL DO ALMOÇO É ATÉ R$ 70,00 POR PESSOA.<br>
-        BEBIDAS NãO INCLUSAS
+        BEBIDAS NÃO INCLUSAS
       </h4>
 
     </div>
